Move bundle load to builder
Signed-off-by: kirillzotkin <kirillzotkin@gmail.com>

--- a/org.k.classmaker/plugin.xml
+++ b/org.k.classmaker/plugin.xml
@@ -51,5 +51,15 @@
                class="org.k.classmaker.builders.ExportingBuilder">
          </run></builder>
    </extension>
+   <extension
+         id="bundleBuilder"
+         name="Bundle Load Builder"
+         point="org.eclipse.core.resources.builders">
+      <builder>
+         <run
+               class="org.k.classmaker.builders.BundleBuilder">
+         </run>
+      </builder>
+   </extension>
 
 </plugin>
