--- a/org.classmaker.test/.project
+++ b/org.classmaker.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.classmaker</name>
+	<name>org.classmaker.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
