--- a/org.k.classmaker.test/.project
+++ b/org.k.classmaker.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.k.classmaker.test</name>
+	<name>org.k.classmaker.test_</name>
 	<comment></comment>
 	<projects>
 	</projects>
