Add Incore sample application and E4 DI support
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classsupplier/build.properties
+++ b/org.classsupplier/build.properties
@@ -3,7 +3,9 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               OSGI-INF/
+               OSGI-INF/,\
+               COPY,\
+               epl-v10.html
 output.. = bin/
 jars.compile.order = .
 source.. = src/,\
