--- a/org.classsupplier/plugin.xml
+++ b/org.classsupplier/plugin.xml
@@ -18,7 +18,7 @@
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
-               class="org.classsupplier.DomainProjectNature">
+               class="org.classsupplier.impl.DomainProjectNature">
          </run>
       </runtime>
    </extension>
