Rename project to ClasSupplier. Version 0.7.3
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classsupplier.test/.project
+++ b/org.classsupplier.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.classsupplier.test</name>
+	<name>org.classupplier.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
