--- a/org.classupplier.incore/.project
+++ b/org.classupplier.incore/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.classsupplier.incore</name>
+	<name>org.classupplier.incore</name>
 	<comment></comment>
 	<projects>
 	</projects>
