Change license from EPL to MIT
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier.test/build.properties
+++ b/org.classupplier.test/build.properties
@@ -1,7 +1,6 @@
 output.. = bin/
 bin.includes = .,\
                META-INF/,\
-               OSGI-INF/,\
-               epl-v10.html
+               OSGI-INF/
 source.. = src/
 jre.compilation.profile = JavaSE-1.6
