--- a/org.classupplier/build.properties
+++ b/org.classupplier/build.properties
@@ -4,8 +4,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                OSGI-INF/,\
-               COPY,\
-               epl-v10.html
+               COPYING
 output.. = bin/
 jars.compile.order = .
 source.. = src/,\
