Move unfinished tests to separate class, rename COPYING to LICENSE
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier/build.properties
+++ b/org.classupplier/build.properties
@@ -4,7 +4,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                OSGI-INF/,\
-               COPYING
+               LICENSE
 output.. = bin/
 jars.compile.order = .
 source.. = src/,\
