--- a/org.classupplier/build.properties
+++ b/org.classupplier/build.properties
@@ -7,6 +7,5 @@ bin.includes = .,\
                LICENSE
 output.. = bin/
 jars.compile.order = .
-source.. = src/,\
-           xtend-gen/
+source.. = src/
 jre.compilation.profile = JavaSE-1.6
