Change auto-build state while build, other minor changes
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier/build.properties
+++ b/org.classupplier/build.properties
@@ -1,11 +1,15 @@
+
+# <copyright>
+# </copyright>
+#
+# $Id$
+
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               OSGI-INF/,\
-               LICENSE
-output.. = bin/
+               OSGI-INF/
 jars.compile.order = .
 source.. = src/
-jre.compilation.profile = JavaSE-1.6
+output.. = bin/
