--- a/org.classupplier.test/build.properties
+++ b/org.classupplier.test/build.properties
@@ -1,6 +1,5 @@
-output.. = bin/
-bin.includes = .,\
-               META-INF/,\
-               OSGI-INF/
 source.. = src/
-jre.compilation.profile = JavaSE-1.6
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               OSGI-INF/
