Big update, rename Artefact to Contribution
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier.incore/plugin.xml
+++ b/org.classupplier.incore/plugin.xml
@@ -10,7 +10,7 @@
             thread="main"
             visible="true">
          <run
-               class="org.classupplier.incore.App">
+               class="org.classupplier.sample.App">
          </run>
       </application>
    </extension>
