#1 and major update
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -17,12 +17,21 @@ _UI_State_type = State
 _UI_Workspace_type = Workspace
 _UI_DateToStateMapEntry_type = Date To State Map Entry
 _UI_ISchedulingRule_type = IScheduling Rule
+_UI_IFuture_type = IFuture
+_UI_Constructable_type = Constructable
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
 
+_UI_Contribution_name_feature = Name
+_UI_Contribution_time_feature = Time
+_UI_Contribution_version_feature = Version
+_UI_Contribution_stage_feature = Stage
+_UI_Contribution_projectName_feature = Project Name
 _UI_Contribution_snapshots_feature = Snapshots
 _UI_Contribution_state_feature = State
+_UI_Contribution_model_feature = Model
+_UI_Contribution_runtime_feature = Runtime
 _UI_State_name_feature = Name
 _UI_State_time_feature = Time
 _UI_State_version_feature = Version
@@ -31,31 +40,15 @@ _UI_State_projectName_feature = Project Name
 _UI_State_ePackage_feature = EPackage
 _UI_State_dynamicEPackage_feature = Dynamic EPackage
 _UI_State_runtimeEPackage_feature = Runtime EPackage
-_UI_Workspace_Contributions_feature = Contributions
+_UI_Workspace_contributions_feature = Contributions
 _UI_Workspace_resourceSet_feature = Resource Set
 _UI_DateToStateMapEntry_key_feature = Key
 _UI_DateToStateMapEntry_value_feature = Value
 _UI_Unknown_feature = Unspecified
 
-_UI_Phase_PROCESSING_literal = PROCESSING
-_UI_Phase_NEW_literal = NEW
+_UI_Phase_DEFINED_literal = DEFINED
 _UI_Phase_MODELED_literal = MODELED
 _UI_Phase_GENERATED_literal = 
 _UI_Phase_EXPORTED_literal = EXPORTED
+_UI_Phase_INSTALLED_literal = INSTALLED
 _UI_Phase_LOADED_literal = LOADED
-_UI_Contribution_type = Contribution
-_UI_Contribution_snapshots_feature = Snapshots
-_UI_Contribution_state_feature = State
-_UI_Workspace_contributions_feature = Contributions
-_UI_Future_type = Future
-_UI_Contribution_type = Contribution
-_UI_Contribution_snapshots_feature = Snapshots
-_UI_Contribution_state_feature = State
-_UI_Workspace_contributions_feature = Contributions
-_UI_Phase_DEFINED_literal = DEFINED
-_UI_Contribution_name_feature = Name
-_UI_Contribution_time_feature = Time
-_UI_Contribution_version_feature = Version
-_UI_Contribution_stage_feature = Stage
-_UI_Contribution_projectName_feature = Project Name
-_UI_Contribution_ePackage_feature = EPackage
