Return project from builders & renames
Signed-off-by: Kirill Zotkin <kirillzotkin@gmail.com>

--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -52,3 +52,8 @@ _UI_Phase_GENERATED_literal =
 _UI_Phase_EXPORTED_literal = EXPORTED
 _UI_Phase_INSTALLED_literal = INSTALLED
 _UI_Phase_LOADED_literal = LOADED
+_UI_State_generatedEPackage_feature = Generated EPackage
+_UI_Contribution_dynamic_feature = Dynamic
+_UI_Contribution_generated_feature = Generated
+_UI_Contribution_dynamicEPackage_feature = Dynamic EPackage
+_UI_Contribution_generatedEPackage_feature = Generated EPackage
