--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -39,7 +39,6 @@ _UI_State_stage_feature = Stage
 _UI_State_projectName_feature = Project Name
 _UI_State_ePackage_feature = EPackage
 _UI_State_dynamicEPackage_feature = Dynamic EPackage
-_UI_State_runtimeEPackage_feature = Runtime EPackage
 _UI_Workspace_contributions_feature = Contributions
 _UI_Workspace_resourceSet_feature = Resource Set
 _UI_DateToStateMapEntry_key_feature = Key
@@ -48,12 +47,19 @@ _UI_Unknown_feature = Unspecified
 
 _UI_Phase_DEFINED_literal = DEFINED
 _UI_Phase_MODELED_literal = MODELED
-_UI_Phase_GENERATED_literal = 
+_UI_Phase_GENERATED_literal = GENERATED
 _UI_Phase_EXPORTED_literal = EXPORTED
 _UI_Phase_INSTALLED_literal = INSTALLED
 _UI_Phase_LOADED_literal = LOADED
 _UI_State_generatedEPackage_feature = Generated EPackage
-_UI_Contribution_dynamic_feature = Dynamic
-_UI_Contribution_generated_feature = Generated
 _UI_Contribution_dynamicEPackage_feature = Dynamic EPackage
 _UI_Contribution_generatedEPackage_feature = Generated EPackage
+_UI_Contribution_stateHistory_feature = State History
+_UI_VersionToStateMapEntry_type = Version To State Map Entry
+_UI_State_timestamp_feature = Timestamp
+_UI_State_number_feature = Number
+_UI_State_deployableUnitName_feature = Deployable Unit Name
+_UI_VersionToStateMapEntry_key_feature = Key
+_UI_VersionToStateMapEntry_value_feature = Value
+_UI_Contribution_language_feature = Language
+_UI_State_language_feature = Language
