Multiple EPackages support
Signed-off-by: Kirill Zotkin <kirillzotkin@users.noreply.github.com>

--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -63,3 +63,10 @@ _UI_VersionToStateMapEntry_key_feature = Key
 _UI_VersionToStateMapEntry_value_feature = Value
 _UI_Contribution_language_feature = Language
 _UI_State_language_feature = Language
+_UI_Contribution_dynamicEPackages_feature = Dynamic EPackages
+_UI_Contribution_generatedEPackages_feature = Generated EPackages
+_UI_Contribution_workspace_feature = Workspace
+_UI_State_dynamicEPackages_feature = Dynamic EPackages
+_UI_State_generatedEPackages_feature = Generated EPackages
+_UI_State_contribution_feature = Contribution
+_UI_State_ePackages_feature = EPackages
