--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -70,3 +70,10 @@ _UI_State_dynamicEPackages_feature = Dynamic EPackages
 _UI_State_generatedEPackages_feature = Generated EPackages
 _UI_State_contribution_feature = Contribution
 _UI_State_ePackages_feature = EPackages
+_UI_ModelDelta_type = Model Delta
+_UI_EList_type = EList
+_UI_State_changes_feature = Changes
+_UI_State_delta_feature = Delta
+_UI_ModelDelta_changes_feature = Changes
+_UI_ModelDelta_changed_feature = Changed
+_UI_ModelDelta_value_feature = Value
