--- a/org.classupplier.edit/plugin.properties
+++ b/org.classupplier.edit/plugin.properties
@@ -77,3 +77,16 @@ _UI_State_delta_feature = Delta
 _UI_ModelDelta_changes_feature = Changes
 _UI_ModelDelta_changed_feature = Changed
 _UI_ModelDelta_value_feature = Value
+_UI_Customizer_type = Customizer
+_UI_CustomizerQualifier_type = Customizer Qualifier
+_UI_Contribution_customizers_feature = Customizers
+_UI_State_customizers_feature = Customizers
+_UI_Customizer_appliesTo_feature = Applies To
+_UI_CustomizerQualifier_stage_feature = Stage
+_UI_CustomizerQualifier_value_feature = Value
+_UI_PhaseQualifier_type = Phase Qualifier
+_UI_PhaseQualifierToCustomizerMapEntry_type = Phase Qualifier To Customizer Map Entry
+_UI_PhaseQualifier_stage_feature = Stage
+_UI_PhaseQualifier_filter_feature = Filter
+_UI_PhaseQualifierToCustomizerMapEntry_key_feature = Key
+_UI_PhaseQualifierToCustomizerMapEntry_value_feature = Value
