Closes #6 Maven tests passed
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/releng/org.classupplier.configuration/pom.xml
+++ b/releng/org.classupplier.configuration/pom.xml
@@ -44,11 +44,11 @@
 								<id>org.eclipse.osgi.compatibility.state</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
-							<requirement>
+							<!-- <requirement>
 								<type>p2-installable-unit</type>
 								<id>org.classupplier</id>
 								<versionRange>0.0.0</versionRange>
-							</requirement>
+							</requirement>-->
 						</extraRequirements>
 					</dependency-resolution>
 
