--- a/bundles/org.enterprisedomain.classmaker.osgi.systemextension/build.properties
+++ b/bundles/org.enterprisedomain.classmaker.osgi.systemextension/build.properties
@@ -5,3 +5,19 @@ bin.includes = META-INF/,\
                .project,\
                .classpath,\
                build.properties
+# *, *, *
+configs = win32, win32, x86 & \
+	win32,win32,x86_64 & \
+	win32,win32,wpf & \
+	linux, gtk, ppc & \
+	linux, gtk, x86 & \
+	linux, gtk, x86_64 & \
+	linux, motif, x86 & \
+	solaris, motif, sparc & \
+	solaris, gtk, sparc & \
+	aix, motif, ppc & \
+	hpux, motif, ia64_32 & \
+	macosx, carbon, ppc & \
+	macosx, carbon, x86 & \
+	macosx, cocoa, ppc & \
+	macosx, cocoa, x86 & \
