metaModel test. Closes #7
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/examples/org.enterprisedomain.sample/plugin.xml
+++ b/examples/org.enterprisedomain.sample/plugin.xml
@@ -10,7 +10,7 @@
             thread="main"
             visible="true">
          <run
-               class="org.enterprisedomain.sample.App">
+               class="org.enterprisedomain.classmaker.sample.App">
          </run>
       </application>
    </extension>
