--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -1,16 +1,17 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.releng</artifactId>
-	<version>0.7.8-SNAPSHOT</version>
+	<version>0.7.9-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.root</artifactId>
-		<version>0.7.8-SNAPSHOT</version>
+		<version>0.7.9-SNAPSHOT</version>
 	</parent>
 	<modules>
-	    <module>org.enterprisedomain.configuration</module>
+		<module>org.enterprisedomain.configuration</module>
 		<module>org.enterprisedomain.update</module>
 		<module>org.enterprisedomain.target</module>
 	</modules>
