--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -106,3 +106,9 @@ _UI_Stage_EXPORTED_literal = EXPORTED
 _UI_Stage_INSTALLED_literal = INSTALLED
 _UI_Stage_LOADED_literal = LOADED
 _UI_Item_contribution_feature = Contribution
+_UI_ClassMakerPlant_type = Plant
+_UI_Contribution_dependencies_feature = Dependencies
+_UI_Contribution_completionNotified_feature = Completion Notified
+_UI_State_imports_feature = Imports
+_UI_State_saving_feature = Saving
+_UI_ClassMakerPlant_workspace_feature = Workspace
