--- a/examples/org.enterprisedomain.sample/.project
+++ b/examples/org.enterprisedomain.sample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.enterprisedomain.sample</name>
+	<name>org.enterprisedomain.classmaker.sample</name>
 	<comment></comment>
 	<projects>
 	</projects>
