--- a/releng/org.enterprisedomain.update/pom.xml
+++ b/releng/org.enterprisedomain.update/pom.xml
@@ -3,9 +3,9 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.releng</artifactId>
-		<version>0.7.8-SNAPSHOT</version>
+		<version>0.7.9-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.enterprisedomain.update</artifactId>
-	<version>0.7.8-SNAPSHOT</version>
-	<packaging>eclipse-repository</packaging>
+	<version>0.7.9-SNAPSHOT</version>
+	<packaging>eclipse-update-site</packaging>
 </project>
