--- a/features/org.enterprisedomain.ui.workplace.rcp.feature/.project
+++ b/features/org.enterprisedomain.ui.workplace.rcp.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.enterprisedomain.ui.workbench.rcp.feature</name>
+	<name>org.enterprisedomain.ui.workplace.rcp.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
