--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -43,7 +43,7 @@ _UI_ResourceSet_type = Resource Set
 _UI_ModelPair_type = Model Pair
 _UI_Resource_type = Resource
 _UI_CompletionListener_type = Completion Listener
-_UI_ResourceAdapter_type = Resource Adapter
+_UI_ResourceAdapter_type = Resource
 _UI_ClassPlant_type = Class Plant
 _UI_Unknown_type = Object
 
@@ -112,3 +112,5 @@ _UI_Contribution_completionNotified_feature = Completion Notified
 _UI_State_imports_feature = Imports
 _UI_State_saving_feature = Saving
 _UI_ClassMakerPlant_workspace_feature = Workspace
+_UI_State_requiredPlugins_feature = Required Plugins
+_UI_Item_properties_feature = Properties
