--- a/bundles/org.enterprisedomain.classmaker/plugin.xml
+++ b/bundles/org.enterprisedomain.classmaker/plugin.xml
@@ -10,23 +10,14 @@
 
 <plugin>
    <extension
-         id="enterpriseDomainNature"
-         name="EnterpriseDomain Nature"
+         id="projectNature"
+         name="enterpriseDomain Project Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
                class="org.enterprisedomain.classmaker.core.ProjectNature">
          </run>
       </runtime>
-   </extension>
-   <extension
-         id="builder"
-         name="EnterpriseDomain"
-         point="org.eclipse.core.resources.builders">
-      <builder>
-         <run
-               class="org.enterprisedomain.classmaker.core.ProjectBuilder">
-         </run></builder>
    </extension>
    <extension
          point="org.eclipse.emf.ecore.invocation_delegate">
