Update async test and other
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -114,3 +114,5 @@ _UI_State_saving_feature = Saving
 _UI_ClassMakerPlant_workspace_feature = Workspace
 _UI_State_requiredPlugins_feature = Required Plugins
 _UI_Item_properties_feature = Properties
+_UI_Executor_type = Executor
+_UI_State_commitId_feature = Commit Id
