Initialize projects after re-open
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -116,3 +116,6 @@ _UI_State_requiredPlugins_feature = Required Plugins
 _UI_Item_properties_feature = Properties
 _UI_Executor_type = Executor
 _UI_State_commitId_feature = Commit Id
+_UI_IAdapterFactory_type = IAdapter Factory
+_UI_Contribution_modelResourceAdapter_feature = Model Resource Adapter
+_UI_Project_needsCompletionNotification_feature = Needs Completion Notification
