--- a/bundles/org.enterprisedomain.classmaker/plugin.xml
+++ b/bundles/org.enterprisedomain.classmaker/plugin.xml
@@ -48,4 +48,14 @@
             type="domainmodel"
             class="org.enterprisedomain.classmaker.util.ClassMakerResourceFactoryImpl"/>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.enterprisedomain.classmaker.Contribution"
+            class="org.enterprisedomain.classmaker.impl.ContributionImpl">
+         <adapter
+               type="org.eclipse.emf.ecore.resource.Resource">
+         </adapter>
+      </factory>
+   </extension>
 </plugin>
