Fix load and re-open, change version on replace by default
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -119,3 +119,6 @@ _UI_State_commitId_feature = Commit Id
 _UI_IAdapterFactory_type = IAdapter Factory
 _UI_Contribution_modelResourceAdapter_feature = Model Resource Adapter
 _UI_Project_needsCompletionNotification_feature = Needs Completion Notification
+_UI_CompletionNotificationAdapter_type = Completion Notification Adapter
+_UI_Project_completionNotificationAdapter_feature = Completion Notification Adapter
+_UI_CompletionNotificationAdapter_exception_feature = Exception
