--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -122,3 +122,4 @@ _UI_Project_needsCompletionNotification_feature = Needs Completion Notification
 _UI_CompletionNotificationAdapter_type = Completion Notification Adapter
 _UI_Project_completionNotificationAdapter_feature = Completion Notification Adapter
 _UI_CompletionNotificationAdapter_exception_feature = Exception
+_UI_State_making_feature = Making
