Initial means for overcoming vendor lock-in
Signed-off-by: Kyrill Zotkin <kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -124,3 +124,11 @@ _UI_Project_completionNotificationAdapter_feature = Completion Notification Adap
 _UI_CompletionNotificationAdapter_exception_feature = Exception
 _UI_State_making_feature = Making
 _UI_CompletionNotificationAdapter_error_feature = Error
+_UI_SCMOperator_type = SCM Operator
+_UI_SCMRegistry_type = SCM Registry
+_UI_SCMOperator_projectName_feature = Project Name
+_UI_ClassMakerPlant_SCMRegistry_feature = SCM Registry
+_UI_Generator_type = Generator
+_UI_Exporter_type = Exporter
+_UI_Installer_type = Installer
+_UI_ModelLoader_type = Model Loader
